src/pages/main/Main.page.css
.main-structure {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  display: grid;
  grid-template-rows: 10vh 90vh;
  grid-template-columns: 15vw 85vw;
}
.main-structure header {
  background: var(--palette-color-1-dark) !important;
  grid-column: 1 / 3;
  grid-row: 1;
  display: flex;
  align-items: center;
  padding: 1vh 1vw;
  position: relative;
}
.main-structure aside {
  padding-top: 1rem;
  background-color: var(--palette-color-1-medium) !important;
  grid-column: 1 / 2;
  grid-row: 2;
  display: flex;
  flex-direction: column;
}
.main-structure article {
  background-color: var(--palette-color-light) !important;
  grid-column: 2/ 3;
  grid-row: 2;
  padding: 2rem;
  display: flex;
  flex-direction: column;
}
.main-structure header span {
  width: 6vh;
  height: 6vh;
  position: relative;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  border: 1px solid rgba(30, 30, 30, 0.2);
  transition: 0.2s;
  margin: 0 1rem;
  padding: 1vh;
  align-items: center;
  border-radius: 0.5rem;
}
.main-structure header span label {
  color: var(--palette-color-light) !important;
  font-size: 1rem;
  margin-top: 0.5rem;
  cursor: pointer;
}
.main-structure header span svg {
  width: 80%;
  aspect-ratio: 1/1;
  position: relative;
}

.main-structure header span::after {
  content: "";
  position: absolute;
  top: 2px;
  left: 2px;
  width: calc(100% - 4px);
  height: 50%;
  border-radius: 0.5rem;
  background: linear-gradient(
    rgba(255, 255, 255, 0.5),
    rgba(255, 255, 255, 0.01)
  );
}

.main-structure header span:hover {
  background: rgba(30, 30, 30, 0.1);
}

.main-structure header span:active::after {
  background: linear-gradient(rgba(30, 30, 30, 0.4), rgba(30, 30, 30, 0.01));
}

.main-structure header span:active {
  box-shadow: 0px 0px 1rem var(--palette-color-glow);
  transition: 0.1s;
}
.main-structure header .message {
  position: absolute;
  right: 0;
  bottom: 0;
  background-color: var(--palette-color-1-light);
  padding: 0.5rem;
  font-weight: bold;
  color: var(--palette-color-1-dark);
  border-left: 0.25rem solid var(--palette-color-1-medium);
}

.main-structure header .project {
  position: absolute;
  right: 0;
  top: 0;
  padding: 0.5rem 1rem;
  background: var(--palette-color-1-light);
  box-sizing: border-box;
  opacity: 0.5;
  border-bottom-left-radius: 0.5rem;
  font-weight: bold;
}

